Update vulnerabilities list for Furbo 360 and Mini
Removed outdated CVE entries for Furbo 360 and added new CVE links with descriptions.

--- a/vulnerabilities.html
+++ b/vulnerabilities.html
@@ -143,27 +143,24 @@ body::-webkit-scrollbar-thumb:hover {
       <li><a href="posts/agentZeroSecurityWriteup.html">CVE-2025-55881 (Agent Zero) CSRF File Upload to RCE</a></li>
       <li><a href="posts/agentZeroSecurityWriteup.html">CVE-2025-55882 (Agent Zero) CSRF File Upload to RCE</a></li>
       <li><a href="https://www.linkedin.com/pulse/xss-safeline-waf-julian-b-f8ysc/">CVE-2025-55883 (SafeLine WAF) Authenticated XSS</a></li>
-      <li><a href="">CVE-2025-XXXX (Furbo 360, Furbo Mini) Improper Certificate Validation</a></li>
-      <li><a href="">CVE-2025-XXXX (Furbo 360, Furbo Mini) Insertion of Sensitive Information into Log File</a></li>
-      <li><a href="">CVE-2025-XXXX (Furbo 360, Furbo Mini) Uncontrolled Resource Consumption</a></li>
-      <li><a href="">CVE-2025-XXXX (Furbo 360, Furbo Mini) Server-Side Request Forgery</a></li>
-      <li><a href="">CVE-2025-XXXX (Furbo 360, Furbo Mini) Race Condition</a></li>
-      <li><a href="">CVE-2025-XXXX (Furbo 360, Furbo Mini) Denial of Service</a></li>
-      <li><a href="">CVE-2025-XXXX (Furbo 360, Furbo Mini) Insecure Storage of Sensitive Information</a></li>
-      <li><a href="">CVE-2025-XXXX (Furbo 360, Furbo Mini) Insecure Storage of Sensitive Information</a></li>
-      <li><a href="">CVE-2025-XXXX (Furbo 360, Furbo Mini) Insecure Storage of Sensitive Information</a></li>
-      <li><a href="">CVE-2025-XXXX (Furbo 360, Furbo Mini) Insecure Storage of Sensitive Information</a></li>
-      <li><a href="">CVE-2025-XXXX (Furbo 360, Furbo Mini) Insecure Storage of Sensitive Information</a></li>
-      <li><a href="">CVE-2025-XXXX (Furbo Mobile Application) Insecure Storage of Sensitive Information</a></li>
-      <li><a href="">CVE-2025-XXXX (Furbo 360, Furbo Mini) Plain text Transmission of Sensitive Information</a></li>
-      <li><a href="">CVE-2025-XXXX (Furbo 360, Furbo Mini) Application Logic Bypass</a></li>
-      <li><a href="">CVE-2025-XXXX (Furbo 360, Furbo Mini) Application Logic Bypass Leading to Denial of Service</a></li>
-      <li><a href="">CVE-2025-XXXX (Furbo 360, Furbo Mini) Hardcoded Credentials</a></li>
-      <li><a href="">CVE-2025-XXXX (Furbo 360, Furbo Mini) Hardcoded Password</a></li>
-      <li><a href="">CVE-2025-XXXX (Furbo 360, Furbo Mini) Information Disclosure</a></li>
-      <li><a href="">CVE-2025-XXXX (Furbo 360, Furbo Mini) Information Disclosure</a></li>
-      <li><a href="">CVE-2025-XXXX (Furbo 360, Furbo Mini) Server-Side Request Forgery</a></li>
-      <li><a href="">CVE-2025-XXXX (Furbo 360, Furbo Mini) Insecure Encryption Algorithm</a></li>
+      <li><a href="https://vuldb.com/?id.328044">CVE-2025-11633 (Furbo 360, Furbo Mini) Improper Certificate Validation</a></li>
+      <li><a href="https://vuldb.com/?id.328046">CVE-2025-11634 (Furbo 360, Furbo Mini) Insertion of Sensitive Information into Log File</a></li>
+      <li><a href="https://vuldb.com/?id.328046">CVE-2025-11635 (Furbo 360, Furbo Mini) Uncontrolled Resource Consumption</a></li>
+      <li><a href="https://vuldb.com/?id.328047">CVE-2025-11636 (Furbo 360, Furbo Mini) Server-Side Request Forgery</a></li>
+      <li><a href="https://vuldb.com/?id.328048">CVE-2025-11637 (Furbo 360, Furbo Mini) Race Condition</a></li>
+      <li><a href="https://vuldb.com/?id.328049">CVE-2025-11638 (Furbo 360, Furbo Mini) Denial of Service</a></li>
+      <li><a href="https://vuldb.com/?id.328050">CVE-2025-11639 (Furbo 360, Furbo Mini) Insecure Storage of Sensitive Information</a></li>
+      <li><a href="https://vuldb.com/?id.328055">CVE-2025-11644 (Furbo 360, Furbo Mini) Insecure Storage of Sensitive Information</a></li>
+      <li><a href="https://vuldb.com/?id.328056">CVE-2025-11645 (Furbo Mobile Application) Insecure Storage of Sensitive Information</a></li>
+      <li><a href="https://vuldb.com/?id.328051">CVE-2025-11640 (Furbo 360, Furbo Mini) Plain text Transmission of Sensitive Information</a></li>
+      <li><a href="https://vuldb.com/?id.328052">CVE-2025-11641 (Furbo 360, Furbo Mini) Application Logic Bypass</a></li>
+      <li><a href="https://vuldb.com/?id.328053">CVE-2025-11642 (Furbo 360, Furbo Mini) Application Logic Bypass Leading to Denial of Service</a></li>
+      <li><a href="https://vuldb.com/?id.328054">CVE-2025-11643 (Furbo 360, Furbo Mini) Hardcoded Credentials</a></li>
+      <li><a href="https://vuldb.com/?source_nvd.328060">CVE-2025-11649 (Furbo 360, Furbo Mini) Hardcoded Password</a></li>
+      <li><a href="https://vuldb.com/?source_nvd.328057">CVE-2025-11646 (Furbo 360, Furbo Mini) Information Disclosure</a></li>
+      <li><a href="https://vuldb.com/?source_nvd.328058">CVE-2025-11647 (Furbo 360, Furbo Mini) Information Disclosure</a></li>
+      <li><a href="https://vuldb.com/?source_nvd.328059">CVE-2025-11648 (Furbo 360, Furbo Mini) Server-Side Request Forgery</a></li>
+      <li><a href="https://nvd.nist.gov/vuln/detail/CVE-2025-11650">CVE-2025-11650 (Furbo 360, Furbo Mini) Insecure Encryption Algorithm</a></li>
 
       <li>Many more to come...</li>
 
