--- a/vulnerabilities.html
+++ b/vulnerabilities.html
@@ -174,6 +174,34 @@ body::-webkit-scrollbar-thumb:hover {
       <li><a href="">CVE-2025-XXXXX (Meatmeet Android Mobile Application) Insecure Algorithm</a></li>
       <li><a href="">CVE-2025-XXXXX (Meatmeet Android Mobile Application) Lack of Certificate Pinning</a></li>
       <li><a href="">CVE-2025-XXXXX (Meatmeet Android Mobile Application) Sensitive Information Stored in Memory</a></li>
+       <li><a href="https://gist.github.com/dead1nfluence/4dffc239b4a460f41a03345fd8e5feb5#file-information-disclosure-md">
+CVE-2025-65820 (Meatmeet) Information Disclosure</a></li>
+      <li><a href="https://gist.github.com/dead1nfluence/4dffc239b4a460f41a03345fd8e5feb5#file-uart-download-mode-enabled-md">
+      CVE-2025-65821 (Meatmeet) UART Download Mode Enabled</a></li>
+      <li><a href="https://gist.github.com/dead1nfluence/4dffc239b4a460f41a03345fd8e5feb5#file-jtag-enabled-md">
+      CVE-2025-65822 (Meatmeet) JTAG Enabled</a></li>
+      <li><a href="https://gist.github.com/dead1nfluence/4dffc239b4a460f41a03345fd8e5feb5#file-hardcoded-credentials-esp32-md">
+      CVE-2025-65823 (Meatmeet) Hardcoded Credentials</a></li>
+      <li><a href="https://gist.github.com/dead1nfluence/4dffc239b4a460f41a03345fd8e5feb5#file-remote-code-execution-md">
+      CVE-2025-65824 (Meatmeet) Remote Code Execution (RCE)</a></li>
+      <li><a href="https://gist.github.com/dead1nfluence/4dffc239b4a460f41a03345fd8e5feb5#file-flash-encryption-disabled-md">
+      CVE-2025-65825 (Meatmeet) Flash Encryption Disabled</a></li>
+      <li><a href="https://gist.github.com/dead1nfluence/4dffc239b4a460f41a03345fd8e5feb5#file-hardcoded-credentials-mobile-md">
+      CVE-2025-65826 (Meatmeet Mobile App) Hardcoded Credentials</a></li>
+      <li><a href="https://gist.github.com/dead1nfluence/4dffc239b4a460f41a03345fd8e5feb5#file-clear-text-traffic-enabled-md">
+      CVE-2025-65827 (Meatmeet Mobile App) Cleartext Traffic Enabled</a></li>
+      <li><a href="https://gist.github.com/dead1nfluence/4dffc239b4a460f41a03345fd8e5feb5#file-denial-of-service-ble-md">
+      CVE-2025-65828 (Meatmeet) Denial of Service (BLE)</a></li>
+      <li><a href="https://gist.github.com/dead1nfluence/4dffc239b4a460f41a03345fd8e5feb5#file-secure-boot-disabled-md">
+      CVE-2025-65829 (Meatmeet) Secure Boot Disabled</a></li>
+      <li><a href="https://gist.github.com/dead1nfluence/4dffc239b4a460f41a03345fd8e5feb5#file-lack-of-certificate-pinning-md">
+      CVE-2025-65830 (Meatmeet Mobile App) Lack of Certificate Pinning</a></li>
+      <li><a href="https://gist.github.com/dead1nfluence/4dffc239b4a460f41a03345fd8e5feb5#file-insecure-algorithm-md">
+      CVE-2025-65831 (Meatmeet Mobile App) Insecure Hashing Algorithm</a></li>
+      <li><a href="https://gist.github.com/dead1nfluence/4dffc239b4a460f41a03345fd8e5feb5#file-sensitive-information-stored-in-memory-md">
+      CVE-2025-65832 (Meatmeet Mobile App) Sensitive Information Stored in Memory</a></li>
+      <li><a href="https://gist.github.com/dead1nfluence/4dffc239b4a460f41a03345fd8e5feb5#file-device-takeover-ble-md">
+      CVE-2025-XXXX (Meatmeet) Unauthenticated Device Takeover</a></li>
       <li>Many more to come...</li>
 
       <li>Many more to come...</li>
